set up new test structure, prepare code to use a final call back, when all file have been processed.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Grep and execute",
   "main": "index.js",
   "scripts": {
-    "test": "test.js"
+    "test": "node tests/index.js"
   },
   "repository": {
     "type": "git",
